--- a/build.yaml
+++ b/build.yaml
@@ -18,4 +18,4 @@ include:
   - board: nice_nano_v2
     shield: tracktyl_right
   - board: nice_nano_v2
-    shield: tracktyl_reset
+    shield: settings_reset
