--- a/config/boards/shields/tracktyl/tracktyl.dtsi
+++ b/config/boards/shields/tracktyl/tracktyl.dtsi
@@ -39,4 +39,23 @@
 			;
 
     };
+	
+	 /* Configure trackballs (either split can have the trackball) */
+	trackballs {
+		compatible = "zmk,keymap-trackballs";
+		trackballs = <&trackball>;
+	};
+
+	/* Declare the trackball */
+	&spi2 {
+		compatible = "nordic,nrf-spim";
+
+		trackball: trackball@0 {
+			compatible = "pixart,pmw3610";
+			status = "disabled";
+			reg = <0>;
+			label = "TRACKBALL";
+			spi-max-frequency = <2000000>;
+			duplex = <2048>; // required by 3-wire spi
+	};
 };
