updated shield refrence information

--- a/config/boards/shields/tracktyl/tracktyl.zmk.yml
+++ b/config/boards/shields/tracktyl/tracktyl.zmk.yml
@@ -2,7 +2,7 @@ file_format: "1"
 id: tracktyl
 name: tracktyl
 type: shield
-url: https://github.com/foostan/crkbd/
+url: https://github.com/b4nn4n4
 requires:
   - pro_micro
 exposes:
