--- a/config/tracktyl_right.conf
+++ b/config/tracktyl_right.conf
@@ -1,4 +1,6 @@
 ### Point Devices ####
+CONFIG_ZMK_USB_LOGGING
+
 CONFIG_ZMK_PD_WORK_QUEUE_DEDICATED=n
 CONFIG_ZMK_PD_DEDICATED_WORK_QUEUE_PRIORITY=2
 CONFIG_ZMK_TRACKBALL_POLL_DURATION=8
