usb logging enabled (this time for real)

--- a/config/tracktyl_right.conf
+++ b/config/tracktyl_right.conf
@@ -1,5 +1,5 @@
 ### Point Devices ####
-CONFIG_ZMK_USB_LOGGING
+CONFIG_ZMK_USB_LOGGING=y
 
 CONFIG_ZMK_PD_WORK_QUEUE_DEDICATED=n
 CONFIG_ZMK_PD_DEDICATED_WORK_QUEUE_PRIORITY=2
