enable pmw logging

--- a/config/tracktyl_right.conf
+++ b/config/tracktyl_right.conf
@@ -20,3 +20,4 @@ CONFIG_PMW3610_REST1_DOWNSHIFT_TIME_MS=5000
 CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=30000
 
 CONFIG_ZMK_USB_LOGGING=y
+CONFIG_PMW3610_LOG_LEVEL_INF=y
