--- a/config/tracktyl_right.conf
+++ b/config/tracktyl_right.conf
@@ -21,3 +21,5 @@ CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=30000
 
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_PMW3610_LOG_LEVEL_INF=y
+CONFIG_ZMK_LOG_LEVEL_DBG=y
+CONFIG_SPI=y
