--- a/config/tracktyl_left.conf
+++ b/config/tracktyl_left.conf
@@ -18,3 +18,9 @@
 #CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=500
 #CONFIG_PMW3610_REST1_DOWNSHIFT_TIME_MS=3000
 #CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=30000
+
+
+CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_LOG_LEVEL_DBG=y
+CONFIG_SPI=y
+CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=15000
