--- a/config/tracktyl_right.conf
+++ b/config/tracktyl_right.conf
@@ -24,3 +24,4 @@ CONFIG_PMW3610_LOG_LEVEL_INF=y
 CONFIG_ZMK_LOG_LEVEL_DBG=y
 CONFIG_SPI=y
 CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=15000
+CONFIG_SPI_LOG_LEVEL_DBG=y
