--- a/config/west.yml
+++ b/config/west.yml
@@ -3,7 +3,7 @@ manifest:
     - name: zmkfirmware
       url-base: https://github.com/fliano
   projects:
-    - name: zmkPmw3610
+    - name: zmk
       remote: zmkfirmware
       revision: pmw3610
       import: app/west.yml
